Heavily refactor workflow around taking log paths as input, which can be directories